Fixed add button background and letter spacing

--- a/input.scss
+++ b/input.scss
@@ -82,7 +82,8 @@ form {
         width: 90%;
         margin-top: 5%;
         height: 40px;
-
+        background-color: white;
+        letter-spacing: 1px;
         &:hover {
             background-color: black;
             color: white;
