--- a/output.css
+++ b/output.css
@@ -101,6 +101,8 @@ form *:last-child {
   width: 90%;
   margin-top: 5%;
   height: 40px;
+  background-color: white;
+  letter-spacing: 1px;
 }
 form *:last-child:hover {
   background-color: black;
